--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,15 @@
 [user]
 	name = ashchur
+	email = 
+[color]
+	ui = true
+	diff = auto
+	status = auto
+	branch = auto
+[color "branch"]
+	current = yellow reverse
+	local = yellow
+	remote = green
 [alias]
 	co = checkout
 	ci = commit
